--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
 .App {
   text-align: center;
 }
@@ -35,4 +36,14 @@
   to {
     transform: rotate(360deg);
   }
+}
+#form{
+  padding: 30px;
+  background-color: #56BBF1;
+  width: 500px;
+  margin-top: 150px;
+  font-family: 'Josefin Sans', sans-serif;
+}
+#text{
+  
 }
